--- a/Ionic/conFusion/www/templates/home.html
+++ b/Ionic/conFusion/www/templates/home.html
@@ -6,8 +6,8 @@
                 <span class="badge badge-assertive">{{dish.label}}</span>
             </div>
             <div class="item item-thumbnail-left item-text-wrap">
-                <img ng-src="{{baseURL+dish.image}}" alt="Uthappizza">
-                <h2>{{dish.name}}<span class="badge">{{dish.price | currency}}</span></h2>
+                <img ng-src="{{baseURL+dish.image}}" alt="{{dish.name}}">
+                <h2>{{dish.name}}<span class="badge" style="font-size:75%">{{dish.price | currency}}</span></h2>
                 <p>{{dish.description}}</p>
             </div>
         </div>
@@ -18,7 +18,7 @@
             </div>
             <div class="item item-thumbnail-left item-text-wrap">
                 <img ng-src="{{baseURL+promotion.image}}" alt="{{promotion.name}}">
-                <h2>{{promotion.name}}<span class="badge">{{promotion.price | currency}}</span></h2>
+                <h2>{{promotion.name}}<span class="badge" style="font-size:75%">{{promotion.price | currency}}</span></h2>
                 <p>{{promotion.description}}</p>
             </div>
         </div>
