--- a/Ionic/conFusion/www/templates/sidebar.html
+++ b/Ionic/conFusion/www/templates/sidebar.html
@@ -17,6 +17,7 @@
                 <ion-item menu-close href="#/app/home">Home</ion-item>
                 <ion-item menu-close href="#/app/aboutus">About Us</ion-item>
                 <ion-item menu-close href="#/app/menu">Menu</ion-item>
+                <ion-item menu-close href="#/app/favorites">My Favorites</ion-item>
                 <ion-item menu-close href="#/app/contactus">Contact Us</ion-item>
                 <ion-item class="item-divider">Services</ion-item>
                 <ion-item menu-close ng-click="login()">Login</ion-item>
