--- a/Ionic/conFusion/www/templates/dish-detail-popover.html
+++ b/Ionic/conFusion/www/templates/dish-detail-popover.html
@@ -2,5 +2,6 @@
   <ion-content>
     <ion-item ng-click="addFavorite()">Add to Favorites</ion-item>
     <ion-item ng-click="openCommentForm()">Add Comment</ion-item>
+    <ion-item ng-click="">Share</ion-item>
   </ion-content>
 </ion-popover-view>
